# pdf-converter

./: .env.example  .gitignore  README.md  cli.py  config.py  pyproject.toml  requirements.txt
core/: alt_text.py  assembler.py  auto_rotate.py  claude_client.py  deskewer.py  exporter.py  figure_extractor.py  image_compressor.py  layout_analyzer.py  ocr.py  pdf_renderer.py  structure.py
gui/: alt_text_editor.py  bbox_editor.py  ocr_editor.py  table_editor.py  workbench.py
prompts/: alt_text.md  layout_analysis.md
